# mesh2smplx

./: .gitignore  LICENSE  NOTICE.md  README.md  main.py  pyproject.toml  requirements.txt
body_models/: README.md
checkpoints/: README.md
configs/: aitviewer.yaml  cpu.yaml  gpu.yaml  local_aitviewer.yaml  rendering.yaml  server_full_pipeline.yaml
data/: README.md
docs/: data_format.md
examples/configs/: textured_mesh.yaml
mesh2smplx/: __init__.py  main.py
mesh2smplx/core/: __init__.py  config.py  frame_selection.py  pipeline.py
mesh2smplx/core/data/: __init__.py  camera_io.py  interfaces.py  mesh_sequence.py  textured_mesh.py
mesh2smplx/core/render/: __init__.py  virtual_cameras.py
mesh2smplx/fitting/: __init__.py  conversion.py  joints.py  losses.py  schedule.py  smpl_fitter.py
mesh2smplx/models/: __init__.py
mesh2smplx/openpose/: __init__.py  __main__.py  _fetch_weights.py  body25.py  face.py  format.py  hand.py  model.py  providers.py  runtime.py  util.py  weights.py
mesh2smplx/visualization/: __init__.py  aitviewer.py  aitviewer_camera_scene.py  aitviewer_live.py  fit_recording.py
scripts/: dechumpify_models.py  download_example_data.sh  render_mesh_camera_check_kaolin.py  run_aitviewer_camera_scene.py  run_gpu.sh  run_gpu_full_pipeline.sh  run_local_debug.sh  run_local_debug_aitviewer.sh  run_starter.sh
src/smpl_registration/: __init__.py  cli.py  pipeline.py  triangulation.py
src/smpl_registration/data/: mesh_sequence.py
src/smpl_registration/fitting/: __init__.py  mesh_losses.py  schedule.py  smpl_fitter.py
src/smpl_registration/keypoints/: __init__.py  openpose_format.py  providers.py
src/smpl_registration/keypoints/openpose135/: __init__.py  __main__.py  _fetch_weights.py  detector.py  draw.py  runtime.py
src/smpl_registration/models/: body_model.py
src/smpl_registration/render/: virtual_cameras.py
src/smpl_registration/visualization/: aitviewer.py  aitviewer_live.py
tests/: test_config.py
