[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mesh2smplx"
version = "0.0.0"
description = "Mesh-aware SMPL/SMPL-X fitting from textured mesh sequences."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC-BY-NC-4.0" }
authors = [
  { name = "SMPL Registration Contributors" }
]
dependencies = [
  # Keep Torch broadly pinned so users can install the wheel matching their CUDA
  # or CPU environment. NumPy is capped because older Torch wheels can fail to
  # initialize NumPy 2.x.
  "numpy>=1.23,<2",
  "opencv-python>=4.8",
  "Pillow>=10",
  "PyYAML>=6",
  "torch>=2.1",
  "tqdm>=4.66",
  "trimesh>=4",
  "smplx>=0.1.28"
]

[project.optional-dependencies]
render = [
  "kaolin"
]
viewer = [
  "aitviewer",
  # Newer OpenCV headless wheels on some platforms require NumPy 2.x, while
  # older Torch wheels used for local debugging may still need NumPy 1.x.
  "opencv-contrib-python-headless<4.12"
]
openpose = [
  "huggingface-hub>=0.23",
  "scipy>=1.10"
]
dev = [
  "ruff>=0.5"
]

[project.scripts]
mesh2smplx = "mesh2smplx.main:main"
mesh2smplx-openpose = "mesh2smplx.openpose.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mesh2smplx*"]

[tool.ruff]
line-length = 100
target-version = "py310"
